Project e_commerce {
  database_type: "MySQL"
  Note: "DBML schema generated from Spring JPA entities"
}

enum role_name {
  ADMIN
  STAFF
  CUSTOMER
}

enum product_status {
  ACTIVE
  INACTIVE
  DRAFT
}

enum order_status {
  PENDING
  CONFIRMED
  SHIPPING
  DELIVERED
  CANCELLED
  RETURNED
}

enum payment_method {
  COD
  VNPAY
  MOMO
  BANK_TRANSFER
  PAYPAL
}

Table users {
  id bigint [pk, increment]
  username varchar(50) [not null, unique]
  password varchar [not null]
  email varchar(100) [unique]
  full_name varchar
  address text
  phone_number varchar [unique]
  isEnabled boolean [not null, default: true]
}

Table roles {
  id bigint [pk, increment]
  name role_name [not null, unique]
}

Table user_roles {
  user_id bigint [not null, pk]
  role_id bigint [not null, pk]
}

Table brands {
  id bigint [pk, increment]
  name varchar [not null]
  image_url varchar
  created_by varchar(100)
  created_at datetime
  modified_by varchar(100)
  modified_at datetime
}

Table categories {
  id bigint [pk, increment]
  name varchar [not null, unique]
  description text
  image_url varchar
  created_by varchar(100)
  created_at datetime
  modified_by varchar(100)
  modified_at datetime
}

Table products {
  id bigint [pk, increment]
  name varchar [not null]
  description text
  avatar_url varchar [not null]
  status product_status [not null]
  category_id bigint [not null]
  brand_id bigint [not null]
  created_by varchar(100)
  created_at datetime
  modified_by varchar(100)
  modified_at datetime
}

Table product_variants {
  id bigint [pk, increment]
  product_id bigint [not null]
  sku_code varchar [not null, unique]
  price decimal(19,2) [not null]
  stock_quantity int [not null]
  created_by varchar(100)
  created_at datetime
  modified_by varchar(100)
  modified_at datetime
}

Table product_attributes {
  id bigint [pk, increment]
  name varchar [not null]
}

Table attribute_values {
  id bigint [pk, increment]
  value_name varchar [not null]
  attribute_id bigint [not null]
}

Table variant_attribute_values {
  variant_id bigint [not null, pk]
  attribute_value_id bigint [not null, pk]
}

Table variant_image {
  id bigint [pk, increment]
  variant_id bigint [not null]
  image_url varchar [not null]
  is_avatar boolean [not null, default: false]
}

Table cart_items {
  id bigint [pk, increment]
  user_id bigint [not null]
  variant_id bigint [not null, unique]
  quantity int [not null]
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [not null]
  total_price decimal(19,2) [not null]
  shipping_fee decimal(19,2) [default: 0]
  status order_status [not null, default: 'PENDING']
  full_name varchar
  phone_number varchar(15)
  shipping_address text [not null]
  payment_method payment_method [not null]
  is_paid boolean [not null, default: false]
  payment_date datetime
  created_by varchar(100)
  created_at datetime
  modified_by varchar(100)
  modified_at datetime
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null]
  variant_id bigint [not null]
  quantity int [not null]
  price decimal(19,2) [not null]
}

Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id
Ref: products.category_id > categories.id
Ref: products.brand_id > brands.id
Ref: product_variants.product_id > products.id
Ref: attribute_values.attribute_id > product_attributes.id
Ref: variant_attribute_values.variant_id > product_variants.id
Ref: variant_attribute_values.attribute_value_id > attribute_values.id
Ref: variant_image.variant_id > product_variants.id
Ref: cart_items.user_id > users.id
Ref: cart_items.variant_id > product_variants.id
Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.variant_id > product_variants.id

